# robotlisterner

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
src/: App.jsx  App.tsx  index.css
src/components/common/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Table.tsx  index.ts
src/components/dashboard/: RevenueChart.tsx  TaxSummaryCard.tsx  WithdrawalGauge.tsx  index.ts
src/components/expense/: ExpenseForm.tsx  ExpenseList.tsx  index.ts
src/components/income/: IncomeForm.tsx  IncomeList.tsx  index.ts
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/pages/: Dashboard.tsx  Expenses.tsx  Incomes.tsx  Invoices.tsx  Settings.tsx  TaxCalculator.tsx  index.ts
src/rf_rag/: __init__.py  cli.py  config.py  crawler.py  engine.py  graph.py  models.py  parser.py  resolver.py  vectorstore.py
src/rf_rag/modules/: __init__.py  codegen.py  query.py  redundancy.py  smoke.py
src/services/: exchangeRate.ts  taxCalculator.ts
src/store/: expenseStore.ts  incomeStore.ts  index.ts  invoiceStore.ts  settingsStore.ts
src/types/: expense.ts  income.ts  index.ts  invoice.ts  settings.ts  tax.ts
src/utils/: formatters.ts  storage.ts
tests/: conftest.py  test_codegen.py  test_crawler.py  test_engine.py  test_graph.py  test_parser.py  test_redundancy.py  test_resolver.py  test_smoke.py  test_vectorstore.py
tests/fixtures/sample_project/: .gitignore
tests/fixtures/sample_project/SIT/: e2e_login_flow.robot
tests/fixtures/sample_project/data/: GlobalVariables.resource
tests/fixtures/sample_project/tests/: login_test.robot
(+5 files in other folders)
